--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -28,6 +28,12 @@
                 <span class='glyphicon glyphicon-th-list'></span> Add
               </a>
             </li>
+
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/clean"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Clean-Up Tool
+              </a>
+            </li>
           </ul>
         </div>
     </div>
